--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint  --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -24,6 +25,11 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-tailwindcss": "^3.12.1",
     "prettier": "^2.8.8",
     "prettier-plugin-md-nocjsp": "^1.5.1",
     "prettier-plugin-tailwindcss": "^0.3.0"
