chore: eslintのルールをいくらかwarnに緩和

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,21 +9,21 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "tailwindcss"],
   "rules": {
-    "dot-notation": "error",
-    "no-useless-rename": "error",
+    "dot-notation": "warn",
+    "no-useless-rename": "warn",
     "no-duplicate-imports": "error",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-no-useless-fragment": ["error", { "allowExpressions": true }],
-    "react/jsx-curly-brace-presence": "error",
-    "react/jsx-boolean-value": "error",
+    "react/jsx-no-useless-fragment": ["warn", { "allowExpressions": true }],
+    "react/jsx-curly-brace-presence": "warn",
+    "react/jsx-boolean-value": "warn",
     "react/prop-types": "off",
-    "react/self-closing-comp": "error",
-    "react/jsx-fragments": "error",
-    "react/hook-use-state": "error",
+    "react/self-closing-comp": "warn",
+    "react/jsx-fragments": "warn",
+    "react/hook-use-state": "warn",
     "import/newline-after-import": ["error", { "count": 1 }],
     "import/no-cycle": "error",
     "import/order": [
-      "error",
+      "warn",
       {
         "groups": [
           "builtin",
