style: prettierを3系に更新、その他フォーマット更新 (#36)

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,4 @@
 {
   "singleQuote": true,
-  "semi": true,
-  "overrides": [
-    {
-      "files": ["*.md", "README"],
-      "options": {
-        "parser": "markdown-nocjsp"
-      }
-    },
-    {
-      "files": ["*.mdx"],
-      "options": {
-        "parser": "mdx-nocjsp"
-      }
-    }
-  ]
+  "semi": true
 }
