--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "microcms-js-sdk": "^2.5.0",
     "next": "13.4.7",
     "next-seo": "^6.1.0",
     "postcss": "8.4.24",
