--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
