--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint  --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint-all": "npm run lint:fix && npm run format"
   },
   "dependencies": {
     "@types/node": "20.3.1",
