--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-all": "npm run lint:fix && npm run format"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.40.1",
     "@types/node": "20.3.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
