--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "microcms-js-sdk": "^2.5.0",
+    "netlify-plugin-cache-nextjs": "^1.6.1",
     "next": "^13.4.19",
     "next-seo": "^6.1.0",
     "postcss": "8.4.24",
