chore: 何故かimport pluginを指定しなくても動作するが、一応入れる

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "tailwindcss"],
+  "plugins": ["@typescript-eslint", "import", "tailwindcss"],
   "rules": {
     "tailwindcss/classnames-order": [
       "warn",
