--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "lint-all": "npm run lint:fix && npm run format"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.40.1",
-    "@types/node": "20.3.1",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "10.4.14",
-    "date-fns": "^2.30.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "microcms-js-sdk": "^2.5.0",
+    "@netlify/plugin-nextjs": "^5.3.2",
+    "@types/node": "20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "10.4.19",
+    "date-fns": "^3.6.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.4",
+    "microcms-js-sdk": "^3.1.1",
     "netlify-plugin-cache-nextjs": "^1.6.1",
-    "next": "^13.4.19",
-    "next-seo": "^6.1.0",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.4",
+    "next-seo": "^6.5.0",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.1.3"
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.4.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
