chore: typeよりinterfaceに統一

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       }
     ],
     "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/consistent-type-definitions": "error",
 
     // React
     "react/react-in-jsx-scope": "off",
