--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,10 @@
         "format": ["PascalCase"]
       }
     ],
-    "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/consistent-type-imports": [
+      "warn",
+      { "fixStyle": "inline-type-imports" }
+    ],
 
     // React
     "react/react-in-jsx-scope": "off",
