--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "format": ["PascalCase"]
       }
     ],
+    "@typescript-eslint/array-type": ["error", { "default": "array-simple" }],
     "@typescript-eslint/consistent-type-imports": [
       "warn",
       { "fixStyle": "inline-type-imports" }
